Bug fix: Text in focused drop-down fields is hard to see in Dark Mode
(part of issue #296)

--- a/wx-src/style/laf.css
+++ b/wx-src/style/laf.css
@@ -107,6 +107,11 @@ select.browser-style {
     background-image: var(--url-dropdown-arrow);
 }
 
+select.browser-style:focus,
+select.browser-style:focus > option {
+    color: var(--color-btn-text);
+}
+
 button.default:hover {
     border: 1px solid #003eaa;
     background-color: #003eaa;
